...
                            PatientRowView(patient: patient)
                        }
                        .accessibilityHint("Tap to view details of \(patient.fullNameAndAge()).")
                    }
                }
            }
            .navigationTitle("Patients")
            .accessibilityIdentifier("PatientsNavigationBar")
            .searchable(text: $queryText)
            .accessibilityIdentifier("searchBar")
            .toolbar {
                // Button to add new patient
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        showingNewPatientForm = true
                    }) {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("addPatientButton")
                }
            }
        }.sheet(isPresented: $showingNewPatientForm) {
            NewPatientForm(patientStore: patientStore)
        }
    }
...
